--- a/style.css
+++ b/style.css
@@ -1,3 +1,55 @@
 .row {
   padding: 20px;
 }
+
+/*.table {
+  display: none;
+}*/
+.table > tbody > tr > td {
+     vertical-align: middle;
+}
+
+.table-striped>tbody>tr:nth-child(odd)>td, 
+.table-striped>tbody>tr:nth-child(odd)>th {
+   background-color: #457B9D;
+ }
+ 
+ body {
+   font-family: 'Josefin Sans', sans-serif;
+   background-color: #1D3557;
+   color: white;
+ }
+
+ .btn-primary {
+    background: #1D3557;
+    color: #ffffff;
+    border-color: white;
+}
+
+.table-striped td,
+.table-striped th {
+    border: 0;
+    transition: 5s
+}
+
+.table > thead > tr > th {
+  font-weight: bolder;
+  font-size: 1.2em;
+}
+
+/*h1 {
+  animation-duration: 2s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%; 
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}*/
